--- a/modules/web-server/package.json
+++ b/modules/web-server/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.6.10",
+    "framer-motion": "^11.15.0",
+    "install": "^0.13.0",
+    "next": "15.1.2",
+    "npm": "^11.0.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.1.2"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "typescript": "^5.7.2",
