--- a/modules/web-server/package.json
+++ b/modules/web-server/package.json
@@ -9,13 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@nextui-org/react": "^2.6.10",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.15.0",
     "install": "^0.13.0",
     "next": "15.1.2",
     "npm": "^11.0.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "typescript": "^5.7.2",
