--- a/modules/api/pkg/router/BUILD.bazel
+++ b/modules/api/pkg/router/BUILD.bazel
@@ -7,6 +7,7 @@ go_library(
         "company.go",
         "industry.go",
         "job.go",
+        "science.go",
     ],
     importpath = "github.com/HanNguyen-dev/monarch/api/pkg/router",
     visibility = ["//visibility:public"],
